Refactors CSS in featured-product-custom: Fixes text alignment. Allows text and button color to change when background pattern is unchecked.

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -225,10 +225,6 @@ header.site-header.border-bottom.logo--left {
 .pos-absolute {
     position: absolute;
 }
-.absol-bottom {
-    bottom: 25%;
-    top: 25%;
-}
 .featured-product-med__txt-container {
     padding: 0 8rem;
     width: 100%;
